# readdy-cell

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.md  compile.sh  conandata.yml  conanfile.py  conda_env.yml  requirements.txt
cmake/: Findblosc.cmake
cmake/Modules/: Findblosc.cmake
examples/: get_vertices_filtered.py  msd.py
include/graphs/bits/: IndexPersistentVector_detail.h  Vertex_detail.h
include/readdy/: readdy.h
include/readdy/api/: KernelConfiguration.h  ObservableHandle.h  PotentialConfiguration.h  Saver.h  Simulation.h  SimulationLoop.h
include/readdy/common/: Utils.h
include/readdy/io/: BloscFilter.h
readdy/: setup.py
readdy/api/: simulation.py  trajectory.py
readdy/test/: TestIntegration.cpp
readdy/util/: trajectory_utils.py
readdy_cell/: config.yaml  main.py  model_factory.py
readdy_cell/models/: control.pkl  control_bisected.pkl  noco30.pkl  noco60.pkl
readdy_cell/src/: __init__.py
rmm/: model_builder.py  utils.py
src/analysis/: base.py  diffusivity.py  persistence_length.py  reactions.py  topology_graphs.py  velocity.py
src/api/: KernelConfiguration.cpp
src/common/: Config.cpp  Timer.cpp  Utils.cpp  filesystem.cpp  logging.cpp
src/core/: __init__.py  data_loader.py  model.py  model_utils.py  readdy_utils.py
src/factories/: base_factory.py  membrane_factory.py  microtubules_factory.py  mitochondria_factory.py  model_factory.py  nucleus_factory.py
src/io/: BloscFilter.cpp  blosc_filter.c
src/kernels/: CMakeLists.txt
src/kernels/cpu/: CMakeLists.txt
src/kernels/cpu/include/: CPUKernel.h  CPUStateModel.h  pool.h
src/kernels/cpu/include/actions/: CPUActionFactory.h  CPUBreakBonds.h  CPUCalculateForces.h  CPUCreateNeighborList.h  CPUEulerABDIntegrator.h  CPUEulerBDIntegrator.h  CPUEvaluateCompartments.h  CPUEvaluateTopologyReactions.h  CPUMiscActions.h  CPUTriggerReaction.h
src/kernels/cpu/include/actions/reactions/: CPUGillespie.h  CPUUncontrolledApproximation.h  Event.h  ReactionUtils.h
src/kernels/cpu/include/actions/topologies/: CPUTopologyActionFactory.h  CPUTopologyActions.h
src/kernels/cpu/include/data/: DataContainer.h  DefaultDataContainer.h  ObservableData.h
src/kernels/cpu/include/nl/: CellLinkedList.h
src/kernels/cpu/include/observables/: CPUObservableFactory.h  CPUObservables.h
src/kernels/cpu/src/: CPUKernel.cpp  CPUStateModel.cpp
src/kernels/cpu/src/actions/: CPUActionFactory.cpp  CPUCalculateForces.cpp  CPUEulerABDIntegrator.cpp  CPUEulerBDIntegrator.cpp  CPUEvaluateCompartments.cpp  CPUEvaluateTopologyReactions.cpp
src/kernels/cpu/src/actions/reactions/: CPUGillespie.cpp  CPUUncontrolledApproximation.cpp  Event.cpp  ReactionUtils.cpp
src/kernels/cpu/src/actions/topologies/: CPUTopologyActionFactory.cpp  CPUTopologyActions.cpp
src/kernels/cpu/src/nl/: CellLinkedList.cpp  ContiguousCellLinkedList.cpp
src/kernels/cpu/src/observables/: CPUObservableFactory.cpp  CPUObservables.cpp
src/kernels/cpu/test/: CMakeLists.txt  TestMain.cpp  TestNeighborList.cpp  TestReactions.cpp
src/kernels/singlecpu/: CMakeLists.txt
src/kernels/singlecpu/include/: SCPUKernel.h  SCPUStateModel.h
src/kernels/singlecpu/include/actions/: SCPUActionFactory.h  SCPUBreakBonds.h  SCPUCalculateForces.h  SCPUCreateNeighborList.h  SCPUEulerABDIntegrator.h  SCPUEulerBDIntegrator.h  SCPUEvaluateCompartments.h  SCPUEvaluateTopologyReactions.h  SCPUMiscActions.h  SCPUReactionImpls.h  SCPUReactionUtils.h  SCPUTriggerReaction.h
src/kernels/singlecpu/include/model/: ObservableData.h  SCPUNeighborList.h  SCPUParticleData.h
src/kernels/singlecpu/include/model/topologies/: SCPUTopologyActionFactory.h  SCPUTopologyActions.h
src/kernels/singlecpu/include/observables/: SCPUObservableFactory.h  SCPUObservables.h
src/kernels/singlecpu/src/: SCPUActionFactory.cpp  SCPUKernel.cpp  SCPUStateModel.cpp
src/kernels/singlecpu/src/actions/: SCPUCreateNeighborList.cpp  SCPUEulerABDIntegrator.cpp  SCPUEvaluateCompartments.cpp  SCPUEvaluateTopologyReactions.cpp  SCPUReactionImpls.cpp
src/kernels/singlecpu/src/observables/: SCPUObservableFactory.cpp
src/kernels/singlecpu/src/topologies/: SCPUTopologyActionFactory.cpp
src/kernels/singlecpu/test/: TestMain.cpp  TestNeighborList.cpp
src/model/: Actions.cpp  Context.cpp  IOUtils.cpp  Particle.cpp  ParticleTypeRegistry.cpp  StateModel.cpp  Utils.cpp
src/plugin/: KernelProvider.cpp
src/python/: CMakeLists.txt
src/python/bindings/: CMakeLists.txt
src/python/bindings/api/: ApiModule.cpp  ExportGeometry.cpp  ExportKernelContext.cpp  ExportLoopApi.cpp  ExportObservables.h  ExportTopologies.cpp  PyTopology.h
src/python/bindings/common/: CommonModule.cpp  ReadableParticle.h  ReadableReactionRecord.cpp  ReadableReactionRecord.h  Utils.cpp
src/reactions/: active_transport_engine.py  active_transport_reactions.py  mitochondrial_dynamics.py  reaction_utils.py
src/utils/: graph_generator.py  io.py
src/visualization/: agent_data_custom.py  binary_writer_custom.py  readdy_converter_custom.py  simularium_converter.py  trajectory_data_custom.py
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  IntegrationTests.cpp  TestAlgorithms.cpp  TestBreakingBonds.cpp  TestCompartments.cpp  TestContext.cpp  TestDetailedBalance.cpp  TestEulerABDIntegrator.cpp  TestGeometries.cpp  TestIndex.cpp  TestIndexPersistentVector.cpp  TestIntegration.cpp  TestMain.cpp  TestMatrix33.cpp  TestObservables.cpp  TestPlugins.cpp  TestPotentials.cpp  TestReactions.cpp  TestSignals.cpp  TestSimulationLoop.cpp  TestStateModel.cpp  TestTopologies.cpp  TestTopologyGraphs.cpp  TestTopologyReactions.cpp  TestTopologyReactionsExternal.cpp  TestTriggerReaction.cpp  TestVec3.cpp
tests/python/: test_checkpoints.py  test_custom_loop.py  test_detailed_balance.py  test_io.py  test_io_utils.py  test_observables_io.py  test_sanity.py  test_scheme_api.py  test_toplevel_api.py  test_toplevel_registry_compartments.py  test_toplevel_registry_reactions.py  test_topology_graphs.py  test_topology_reactions.py  test_units.py
tests/utils/: KernelMock.h  KernelTest.h  NOOPPotential.h  Utils.h
(+126 files in other folders)
